--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "set PORT=3020 && serve -s build"
   },
   "eslintConfig": {
     "extends": [
